# macro-crew

./: .env.dist  .gitignore  CLAUDE.md  FRONTEND.md  README.md  ecosystem.config.cjs  history_report.json  index.html  package-lock.json  pyproject.toml  research_report.json  scheduler.py  vite.config.ts
.kiro/specs/json-report-system/: design.md  requirements.md  tasks.md
.kiro/specs/simple-report-generation/: design.md  requirements.md  tasks.md
.kiro/steering/: operations.md  product.md  structure.md  tech.md  testing.md
knowledge/: blank_report.json  user_preference.txt
public/: .htaccess  research_report.json
src/app/: App.tsx
src/app/components/: EconomicIndicatorCard.tsx  HistoricalTrendCard.tsx  PlainEnglishSection.tsx  PublicationCalendarCard.tsx  ReportSummaryCard.tsx
src/styles/: fonts.css  theme.css
src/uk_macro_crew/: crew.py  history.py  main.py  migrate_history.py  normalization.py  official_history.py  official_schedule.py  schema.py  utils.py
src/uk_macro_crew/config/: agents.yaml  tasks.yaml
src/uk_macro_crew/tools/: __init__.py  csv_tool.py  json_tool.py
tests/: test_crew_integration.py  test_history.py  test_integration.py  test_json_tool.py  test_official_history.py  test_scheduler.py  test_schema.py  test_utils.py
